# KDFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/off_policy_kd/: run_30b_a3b_to_4b.sh
examples/on_policy_kd/: run_30b_a3b_to_4b.sh
examples/sft/: run_qwen3_4b.sh
kdflow/algorithms/: __init__.py  dskd.py  sft.py  vanilla_kd.py
kdflow/arguments/: __init__.py  data_args.py  distillation_args.py  fsdp_args.py  logging_args.py  model_args.py  rollout_args.py  training_args.py
kdflow/backend/: __init__.py
kdflow/backend/fsdp/: __init__.py  fsdp_strategy.py
kdflow/backend/sglang/: monkey_patch.py  sglang_engine.py
kdflow/cli/: train_kd_off_policy.py  train_kd_on_policy.py  train_sft.py
kdflow/datasets/: __init__.py  prompts_dataset.py  sft_dataset.py  utils.py
kdflow/loss/: __init__.py  adaptive_kl_div.py  cross_entropy.py  js_div.py  kl_div.py  reverse_kl_div.py  skewed_kl_div.py  skewed_rkl_div.py  top1_ce.py  tvd.py
kdflow/models/: __init__.py  model.py  utils.py
kdflow/ray/: placement_group.py
kdflow/ray/rollout/: __init__.py  rollout_actor.py  rollout_group.py
kdflow/ray/train/: student_actor.py  student_group.py  teacher_actor.py  teacher_group.py
kdflow/trainer/: __init__.py  off_policy_kd_trainer.py  on_policy_kd_trainer.py  sft_trainer.py
kdflow/utils/: __init__.py  logging_utils.py  utils.py
